--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -5,7 +5,6 @@ applications:
   - route: allocations-pal-wf.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-wf.cfapps.io
   services:
   - tracker-allocations-database
+  - pal-tracker-distributed
