--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,7 +5,6 @@ applications:
   - route: backlog-pal-wf.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-wf.cfapps.io
   services:
   - tracker-backlog-database
+  - pal-tracker-distributed
