--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -5,7 +5,6 @@ applications:
   - route: timesheets-pal-wf.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-wf.cfapps.io
   services:
   - tracker-timesheets-database
+  - pal-tracker-distributed
