Config server build

--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -9,3 +9,4 @@ applications:
   - tracker-timesheets-database
   - pal-tracker-distributed
   - tracker-circuit-breaker-dashboard
+  - tracker-config-server
