--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -9,3 +9,4 @@ applications:
   - tracker-allocations-database
   - pal-tracker-distributed
   - tracker-circuit-breaker-dashboard
+  - tracker-config-server
