--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -9,3 +9,4 @@ applications:
   - tracker-backlog-database
   - pal-tracker-distributed
   - tracker-circuit-breaker-dashboard
+  - tracker-config-server
