--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+application.oauth-enabled=false
+
 server.port=8084
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_timesheets_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
